--- a/core/config/config.json
+++ b/core/config/config.json
@@ -1,10 +1,22 @@
 {
-    "mysql": {
-        "host": "",
-        "username": "",
-        "password": "",
-        "db": "",
-        "charset": "utf8mb4",
-        "port": 3306
+    "DbController": {
+
+        "mysql": {
+            "host": "",
+            "username": "",
+            "password": "",
+            "db": "",
+            "charset": "utf8mb4",
+            "port": 3306
+        }
+
+    },
+    "OutputController": {
+
+        "headers_prepared": [
+            "Access-Control-Allow-Origin: *",
+            "Access-Control-Allow-Methods: GET, POST"
+        ]
+
     }
 }
